# paperwork-switzerland

./: .editorconfig  .env.example  .gitignore  .prettierignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.de.md  CONTRIBUTING.fr.md  CONTRIBUTING.it.md  CONTRIBUTING.md  LICENSE  README.de.md  README.fr.md  README.it.md  README.md  SECURITY.md  company.example.json  eslint.config.js  marketplace.json  package.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
controleur-afc/: SKILL.de.md  SKILL.fr.md  SKILL.it.md  SKILL.md  company.example.json
data/: sources.json
evals/: README.md  aggregate_benchmark.py  config.yaml  pyproject.toml  run_evals.py
evals/files/: bexio-transactions-sample.json  camt053-sample.xml  camt054-sample.xml  company-geneve-fiduciaire.json  company-zurich-saas.json  copro-ppe-vaud-sample.json  expatrie-impot-source-sample.json  foyer-frontalier-sample.json  foyer-resident-zh-sample.json  independant-sarl-sample.json  invoice-test-tva.json  lohnausweis-sample.json  qr-bill-sample.json  retraite-3a-sample.json  sa-familiale-sample.json
evals/tests/: test_run_evals.py
expert-fiscal/: SKILL.de.md  SKILL.fr.md  SKILL.it.md  SKILL.md  company.example.json
fiduciaire/: SKILL.de.md  SKILL.fr.md  SKILL.it.md  SKILL.md  company.example.json
integrations/: .env.template  README.md
notaire-cantonal/: SKILL.de.md  SKILL.fr.md  SKILL.it.md  SKILL.md  company.example.json
regie/: SKILL.de.md  SKILL.fr.md  SKILL.it.md  SKILL.md  company.example.json
reviseur-agree/: SKILL.de.md  SKILL.fr.md  SKILL.it.md  SKILL.md  (+1 more)
(+257 files in other folders)
